Corrected background for contrast

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,7 +40,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 85%;
+    --background: 0 0% 90%;
     --foreground: 20 14.3% 4.1%;
     --card: 24.6 75% 90%;
     --card-foreground: 20 14.3% 4.1%;
@@ -68,7 +68,7 @@
   }
 
   .dark {
-    --background: 0 0% 15%;
+    --background: 0 0% 10%;
     --foreground: 60 9.1% 97.8%;
     --card: 0 0% 45%;
     --card-foreground: 60 9.1% 97.8%;
